Refactor send test message feature

--- a/app/views/users/send_test_message.html.slim
+++ b/app/views/users/send_test_message.html.slim
@@ -17,6 +17,26 @@ h1 = "#{@sender.name} → #{@receiver.name}"
 
 .well
   h4
+    .span.label.label-default Video Message
+  br
+  .row
+    .col-xs-3
+      - [ \
+          { name: 'Test Video Sani', file_name: 'test_video_sani' }, \
+          { name: 'Test Video Sani Long', file_name: 'test_video_sani_long' }, \
+          {}, \
+          {}, \
+          {}, \
+          {}, \
+          {}, \
+          {}, \
+          {}, \
+          {}, \
+      ].each do |message|
+        = link_to message[:name], user_send_test_message_path( \
+          message: { type: 'video', sender_id: @sender.id, file_name: message[:file_name] }), method: :post
+.well
+  h4
     .span.label.label-default Text Message
   br
   .row
