--- a/app/views/users/new_connection.html.slim
+++ b/app/views/users/new_connection.html.slim
@@ -1,4 +1,8 @@
+- content_for(:additional_user_navigation)
+  li = link_to '→ Back to User', @user
+
 h1 Listing users
+
 table
   thead
     tr
@@ -20,4 +24,3 @@ table
           ' |
           = link_to 'Show', user
 br
-= link_to 'Back', @user
