--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,7 @@ html
     title
       = content_for?(:title) ? yield(:title) : 'Zazo'
     meta name="description" content="#{content_for?(:description) ? yield(:description) : 'Zazo'}"
+    == stylesheet_link_tag '//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css'
     == stylesheet_link_tag "application", :media => 'all', 'data-turbolinks-track' => true
     == javascript_include_tag 'application', 'data-turbolinks-track' => true
     == csrf_meta_tags
