--- a/app/views/s3_credentials/edit.html.slim
+++ b/app/views/s3_credentials/edit.html.slim
@@ -1,4 +1,5 @@
-h1 Editing S3 credential
+h1 Editing #{@s3_credential.class.credential_type} credential
+
 = render 'form'
 br
-= link_to 'Show', @s3_credential, class: 'btn btn-default'
+= link_to 'Show', s3_credential_path(params[:id]), class: 'btn btn-default'
