Fix s3 credentials admin routes

--- a/app/views/admin_s3_credentials/show.html.slim
+++ b/app/views/admin_s3_credentials/show.html.slim
@@ -16,4 +16,4 @@ table.table
     td
       code = @s3_credential.secret_key
 
-= link_to 'Edit', edit_s3_credential_path(params[:id]), class: 'btn btn-default'
+= link_to 'Edit', edit_admin_s3_credential_path(params[:id]), class: 'btn btn-default'
