--- a/app/views/admin_s3_credentials/edit.html.slim
+++ b/app/views/admin_s3_credentials/edit.html.slim
@@ -2,4 +2,4 @@ h1 Editing #{@s3_credential.class.credential_type} credential
 
 = render 'form'
 br
-= link_to 'Show', s3_credential_path(params[:id]), class: 'btn btn-default'
+= link_to 'Show', admin_s3_credential_path(params[:id]), class: 'btn btn-default'
