--- a/app/views/admin_s3_credentials/index.html.slim
+++ b/app/views/admin_s3_credentials/index.html.slim
@@ -3,4 +3,4 @@ h1 s3 credentials
 table.table
   - %w(videos avatars).each do |type|
     tr
-      td = link_to type, s3_credential_path(type)
+      td = link_to type, admin_s3_credential_path(type)
