--- a/app/views/layouts/_navigation_links.html.slim
+++ b/app/views/layouts/_navigation_links.html.slim
@@ -2,5 +2,5 @@ li = link_to 'Users', users_path
 = yield(:additional_user_navigation) if content_for?(:additional_user_navigation)
 li = link_to 'Connections', connections_path
 li = link_to 'KV store admin', kvstore_admin_path
-li = link_to 'S3 credentials', s3_credentials_path
+li = link_to 'S3 credentials', admin_s3_credentials_path
 li = link_to 'Version Compatibility', version_compatibilities_path
